--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <title>Portifolio | Website </title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
@@ -11,10 +12,10 @@
     <header>
       <nav>
         <ul>
-          <li><a href="../About.html">About</a></li>
-          <li><a href="../products.html">Products</a></li>
-          <li><a href="../workers.html">Our Team</a></li>
-          <li class="Contacts"><a href="../contact.htmls">Contact</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="workers.html">Our Team</a></li>
+          <li class="Contacts"><a hrecontact.htmls">Contact</a></li>
         </ul>
       </nav>
 
@@ -76,13 +77,12 @@
     </div>
 
     <footer>
-
       <nav>
         <ul>
-          <li><a href="../About.html">About</a></li>
-          <li><a href="../products.html">Products</a></li>
-          <li><a href="../workers.html">Our Team</a></li>
-          <li><a href="../contact.htmls">Contact</a></li>
+          <li><a href="About.html">About</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="workers.html">Our Team</a></li>
+          <li><a href="contact.htmls">Contact</a></li>
         </ul>
       </nav>
       <p>Produced By Udochukwu and Team &copy 2021</p>
