Corrected the Broken Link contact.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="About.html">About</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="workers.html">Our Team</a></li>
-          <li class="Contacts"><a hrecontact.htmls">Contact</a></li>
+          <li class="Contacts"><a href='contact.html'>Contact</a></li>
         </ul>
       </nav>
 
@@ -82,7 +82,7 @@
           <li><a href="About.html">About</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="workers.html">Our Team</a></li>
-          <li><a href="contact.htmls">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <p>Produced By Udochukwu and Team &copy 2021</p>
