Edit the Card div and made Header Sticky

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 <body>
   <div class="container">
-    <header>
+    <header class="sticky">
       <nav>
         <ul>
           <li><a href="About.html">About</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="workers.html">Our Team</a></li>
-          <li class="Contacts"><a href='contact.html'>Contact</a></li>
+          <li class="push"><a href='contact.html'>Contact</a></li>
         </ul>
       </nav>
 
